cabal-version: 3.0
name: text-builder-time
version: 0
category: Text, Builders, Time
synopsis: Various formats for "time" in terms of "text-builder"
description:
  Part of the "text-builder" ecosystem, providing rendering to various formats for the types of the "time" library.
  Currently it only provides support for ISO-8601.
  Other formats are to be added later.

homepage: https://github.com/nikita-volkov/text-builder-time
bug-reports: https://github.com/nikita-volkov/text-builder-time/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/nikita-volkov/text-builder-time

common base
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    TextBuilderTime.Iso8601

  build-depends:
    base >=4.11 && <5,
    text-builder ^>=1.0.0.1,
    time >=1.12 && <2,
